[package]
name = "bandit"
version = "0.1.0"
edition = "2021"

[dependencies]
bytesize = "1.3.0"
clap = { version = "4.5.4", features = ["derive"] }
dotenvy = "0.15.7"
eyre = "0.6.12"
indicatif = "0.17.8"
rand = "0.8.5"
tokio = { version = "1.37.0", features = [
    "net",
    "io-util",
    "macros",
    "rt-multi-thread",
] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = [
    "time",
    "parking_lot",
    "env-filter",
] }
tracing-tree = { version = "0.3.0", features = ["time"] }
